--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <div class="carousel-item active slider-img">
                   <img src="asset/img/g2.jpg" alt="First slide">
                   <div class=" slider-caption">
-                    <h3 class="">Farm Fresh <br>Groceries</h3>
+                    <h3 class="">Farm Fresh <br>Vegetables</h3>
                     <br>
                     <a class="btn btn-primary border text-white btn-lg" href="#" role="button">Shop Now</a>
                   </div>
@@ -129,7 +129,7 @@
                 <div class="carousel-item slider-img">
                   <img src="asset/img/g3.jpg" alt="Second slide">
                   <div class=" slider-caption">
-                    <h3 class="">Farm Fresh <br>Groceries</h3>
+                    <h3 class="">Affordable Provisions</h3>
                     <br>
                     <a class="btn btn-primary border text-white btn-lg" href="#" role="button">Shop Now</a>
                   </div>
@@ -138,7 +138,7 @@
                 <div class="carousel-item slider-img">
                   <img src="asset/img/g1.jpeg" alt="Third slide">
                   <div class=" slider-caption">
-                    <h3 class="">Farm Fresh <br>Groceries</h3>
+                    <h3 class="">Groceries</h3>
                     <br>
                     <a class="btn btn-primary border text-white btn-lg" href="#" role="button">Shop Now</a>
                   </div>
@@ -172,11 +172,11 @@
         <div >
 
           <div class="row">
-            <span class="p-3">
-              <h4>STORES NEAR YOU</h4>
-            </span>
             <div class="col-lg-12 p-0">
               <div class="container p-4 product-box">
+                <div class="row w-100 d-flex pl-4 justify-content-between">
+                  <span class="text-left h4">STORES NEAR YOU</span>
+                </div>
                 <div class="card m-3 stores-1">
                   <img src="asset/img/h.jpg" class="card-img-top" alt="...">
                   <div class="card-body stores-desc">
@@ -237,7 +237,10 @@
         </section>
 
         <section>
-          <div class="container p-4 product-box">
+          <div class="container product-box">
+            <div class="row w-100 d-flex pl-4 justify-content-between">
+              <span class="text-left h4">TOP CATEGORIES</span>
+            </div>
             <div class="card m-3 product-1">
               <div class="row no-gutters">
                 <div class="col-6">
@@ -337,7 +340,7 @@
         </div>
         <section class="container-fluid">
 
-          <div class="row w-100 d-flex justify-content-between">
+          <div class="row w-100 d-flex pl-4 justify-content-between">
             <span class="text-left h4">ALL PRODUCTS</span>
           </div>
           <div class="col-lg-12 p-0">
