--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <title>Landing</title>
 </head>
 
-<body class="container-fluid">
+<body class="">
 
   <header class="section-header">
     <!-- header-main .// -->
@@ -169,9 +169,7 @@
         </div>
       </section>
       <section class="container-fluid">
-        <div >
-
-          <div class="row">
+        <div class="row">
             <div class="col-lg-12 p-0">
               <div class="container p-4 product-box">
                 <div class="row w-100 d-flex pl-4 justify-content-between">
@@ -490,9 +488,9 @@
               <div class="row footer-list">
                 <span>Connect With Us</span>
                 <ul>
-                  <span><img src="facebook-logo.png" width="20"alt=""> </span>
+                  <span><img src="asset/img/facebook-logo.png" width="20"alt=""> </span>
 
-                  <span><img src="twitter-logo.PNG" width="20"alt=""></span>
+                  <span><img src="asset/img/twitter-logo.PNG" width="20"alt=""></span>
                 </ul>
               </div>
             </div>
