--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body class="">
 
-  <header class="section-header">
+  <header class="header">
     <!-- header-main .// -->
     <section class="">
       <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
