--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <!-- <span class="navbar-toggler-icon"></span> -->
           </button>
           <a class="navbar-brand pl-3" href="#">
-            <img src="asset/img/logo.jpeg" width="80" alt="">  </a>
+            <img src="asset/img/logo.jpeg" width="90" alt="">  </a>
 
             <div class="d-lg-none">
 
@@ -242,60 +242,95 @@
               <div class="card m-3 stores-1">
                 <img src="asset/img/h.jpg" class="card-img-top" alt="...">
                 <div class="card-body stores-desc">
-                  <span class="h6">Dmatrix Stores</span>
+                  <span class="h6">Akhigbe African Stores</span>
                 </div>
                 <div class="desc-footer">
 
                   <!-- <span><img src="asset/img/pin-point-icon-10.png" class="bg-dark"alt=""> </span> -->
-                  <span><i class="glyphicon glyphicon-map-marker"></i> 4 km</span>
+                  <span><i class="glyphicon glyphicon-map-marker"></i> 10 km</span>
                   <span><i class="glyphicon  glyphicon-heart"></i> 30</span>
                 </div>
               </div>
               <div class="card m-3 stores-1">
                 <img src="asset/img/i.jpg" class="card-img-top" alt="...">
                 <div class="card-body stores-desc">
-                  <span class="h6">Omar Stores</span>
+                  <span class="h6">Laurie meat Stores</span>
                 </div>
                 <div class="desc-footer">
 
-                  <span><i class="glyphicon glyphicon-map-marker"></i>12km </span>
-                  <span><i class="glyphicon  glyphicon-heart"></i>20 </span>
+                  <span><i class="glyphicon glyphicon-map-marker"></i> 7km </span>
+                  <span><i class="glyphicon  glyphicon-heart"></i> 20 </span>
                 </div>
               </div>
               <div class="card m-3 stores-1">
                 <img src="asset/img/p2.jpg" class="card-img-top" alt="...">
                 <div class="card-body stores-desc">
-                  <span class="h6">Best Bargain Supermarket</span>
+                  <span class="h6">Oba Market</span>
                 </div>
                 <div class="desc-footer justify-center">
 
-                  <span><i class="glyphicon glyphicon-map-marker"></i> 6 km </span>
+                  <span><i class="glyphicon glyphicon-map-marker"></i> 3 km </span>
                   <span><i class="glyphicon  glyphicon-heart"></i> 15</span>
                 </div>
               </div>
               <div class="card m-3 stores-1">
                 <img src="asset/img/i.jpg" class="card-img-top" alt="...">
                 <div class="card-body stores-desc">
-                  <span class="h6">Omar Stores</span>
+                  <span class="h6">Oyato Food African Market</span>
                 </div>
                 <div class="desc-footer">
 
-                  <span><i class="glyphicon glyphicon-map-marker"></i>12km </span>
+                  <span><i class="glyphicon glyphicon-map-marker"></i>8km </span>
                   <span><i class="glyphicon  glyphicon-heart"></i>20 </span>
                 </div>
               </div>
               <div class="card m-3 stores-1">
                 <img src="asset/img/h.jpg" class="card-img-top" alt="...">
                 <div class="card-body stores-desc">
-                  <span class="h6">Dmatrix Stores</span>
+                  <span class="h6">Mosaic African Food</span>
                 </div>
                 <div class="desc-footer">
 
                   <!-- <span><img src="asset/img/pin-point-icon-10.png" class="bg-dark"alt=""> </span> -->
-                  <span><i class="glyphicon glyphicon-map-marker"></i> 4 km</span>
+                  <span><i class="glyphicon glyphicon-map-marker"></i> 20 km</span>
                   <span><i class="glyphicon  glyphicon-heart"></i> 30</span>
                 </div>
               </div>
+              <div class="card m-3 stores-1">
+                <img src="asset/img/h.jpg" class="card-img-top" alt="...">
+                <div class="card-body stores-desc">
+                  <span class="h6">Naomi African Foods</span>
+                </div>
+                <div class="desc-footer">
+
+                  <!-- <span><img src="asset/img/pin-point-icon-10.png" class="bg-dark"alt=""> </span> -->
+                  <span><i class="glyphicon glyphicon-map-marker"></i> 20 km</span>
+                  <span><i class="glyphicon  glyphicon-heart"></i> 30</span>
+                </div>
+              </div>
+              <div class="card m-3 stores-1">
+                <img src="asset/img/p2.jpg" class="card-img-top" alt="...">
+                <div class="card-body stores-desc">
+                  <span class="h6">Simi African Food Market</span>
+                </div>
+                <div class="desc-footer justify-center">
+
+                  <span><i class="glyphicon glyphicon-map-marker"></i> 13 km </span>
+                  <span><i class="glyphicon  glyphicon-heart"></i> 15</span>
+                </div>
+              </div>
+              <div class="card m-3 stores-1">
+                <img src="asset/img/i.jpg" class="card-img-top" alt="...">
+                <div class="card-body stores-desc">
+                  <span class="h6">Uncle Seth Tropical Food</span>
+                </div>
+                <div class="desc-footer">
+
+                  <span><i class="glyphicon glyphicon-map-marker"></i>15km </span>
+                  <span><i class="glyphicon  glyphicon-heart"></i>20 </span>
+                </div>
+              </div>
+
             </div>
 
             <div class="more text-center p-4">
@@ -406,12 +441,15 @@
           </div>
         </section>
 
-        <div class="jumbotron bg-dark text-white" style="background:url('asset/img/cc.jpeg') no-repeat fixed right top">
-          <h3 class="display-4">Need Pick Up <br>& Delivery Services?</h3>
+<!-- <div class="mid-full"> -->
+
+      <div class="jumbotron bg-dark text-white mid-full text-center" style="">
+          <h3 class="display-4 text-center">Need Pick Up <br>& Delivery Services?</h3>
           <p class="lead">We can help</p>
           <hr class="my-4">
           <a class="btn bg-dark border text-white btn-lg" href="#" role="button">Pick Up Request</a>
         </div>
+      <!-- </div> -->
         <section>
 
           <div class="row w-100 d-flex pl-4 justify-content-center">
