--- a/index.html
+++ b/index.html
@@ -441,15 +441,15 @@
           </div>
         </section>
 
-<!-- <div class="mid-full"> -->
+<div class="mid-full">
 
-      <div class="jumbotron bg-dark text-white mid-full text-center" style="">
-          <h3 class="display-4 text-center">Need Pick Up <br>& Delivery Services?</h3>
+      <div class="jumbotron bg-dark text-white text-center" style="    opacity: 0.9;">
+          <h3 class="display-5 text-center">Need Pick Up & Delivery Services?</h3>
           <p class="lead">We can help</p>
           <hr class="my-4">
           <a class="btn bg-dark border text-white btn-lg" href="#" role="button">Pick Up Request</a>
         </div>
-      <!-- </div> -->
+      </div>
         <section>
 
           <div class="row w-100 d-flex pl-4 justify-content-center">
