--- a/index.html
+++ b/index.html
@@ -88,9 +88,12 @@
 
             <!-- <span class="navbar-toggler-icon"></span> -->
           </button>
-          <a class="navbar-brand pl-3" href="#">
-            <img src="asset/img/logo.jpeg" width="90" alt="">  </a>
-
+          <div class="brand-image">
+              <a class="navbar-brand p-0" href="#">
+              <img src="asset/img/logo.jpeg" width="100" alt="">
+            </a>
+            <span> <i>shopping made easy & fun....</i></span>
+          </div>
             <div class="d-lg-none">
 
               <nav class="navbar navbar-static-top">
@@ -120,15 +123,15 @@
             <div class="collapse navbar-collapse justify-right" id="navbarNav">
               <div class="mr-auto mt-1 mt-lg-0"></div>
               <ul class="navbar-nav">
-                <li class="nav-item m-1 active bt btn-primary rounded-lg">
+                <li class="nav-item m-1 bt btn-dark shadow-lg rounded-lg">
                   <a class="nav-link text-light" href="#">
                     Groceries Delivery
                     <span class="sr-only">(current)</span></a>
                   </li>
-                  <li class="nav-item m-1 bt btn-primary rounded-lg text-light">
+                  <li class="nav-item m-1 bt btn-dark shadow-lg rounded-lg text-light">
                     <a class="nav-link text-light" href="#">Pick up & Delivery</a>
                   </li>
-                  <li class="nav-item m-1 dropdown bt btn-primary rounded-lg text-light">
+                  <li class="nav-item m-1 dropdown bt btn-dark shadow-lg rounded-lg text-light">
                     <a class="nav-link text-light dropdown-toggle" href="#" id="stores" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Stores
                     </a>
@@ -139,7 +142,7 @@
                       <a class="dropdown-item" href="#">Others</a>
                     </div>
                   </li>
-                  <li class="nav-item m-1 dropdown bt btn-primary rounded-lg text-light">
+                  <li class="nav-item m-1 dropdown bt btn-dark shadow-lg rounded-lg text-light">
                     <a class="nav-link dropdown-toggle text-light" href="#" id="categories" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       All Categories
                     </a>
@@ -151,7 +154,7 @@
                       <a class="dropdown-item" href="#">Others</a>
                     </div>
                   </li>
-                  <li class="nav-item m-1 bt btn-primary rounded-lg text-light">
+                  <li class="nav-item m-1 bt btn-dark shadow-lg rounded-lg text-light">
                     <a class="nav-link text-light" href="#" id="products">
                       All Products
                     </a>
@@ -159,10 +162,10 @@
                   </li>
 
 
-                  <li class="nav-item m-1 bt btn-primary rounded-lg text-light">
+                  <li class="nav-item m-1 bt btn-dark shadow-lg rounded-lg text-light">
                     <a class="nav-link text-light" href="#">Inquiry</a>
                   </li>
-                  <li class="nav-item m-1 bt btn-primary rounded-lg text-light">
+                  <li class="nav-item m-1 bt btn-dark shadow-lg rounded-lg text-light">
                     <a class="nav-link text-light" href="#">Track Your Delivery</a>
                   </li>
 
@@ -231,6 +234,41 @@
             <!-- ==================  COMPONENT SLIDER BOOTSTRAP end.// ==================  .// -->
 
 
+          </div>
+        </section>
+        <section class="container">
+
+          <div class="row">
+
+          <div class="card row col-lg-4 text-center p-2 border-0" style="height:130px">
+            <div class="dv col-6">
+
+              <img src="asset/img/1.png" width="100" alt="...">
+            </div>
+            <div class="card-body col-6">
+              <span class="h6">Select the store from which you want to shop from</span>
+            </div>
+          </div>
+          <div class="card row col-lg-4 text-center p-2 border-0" style="height:130px">
+            <div class="dv col-6 p-1">
+
+            <img src="asset/img/2.png" width="100" alt="...">
+          </div>
+          <div class="card-body col-6">
+              <span class="h6">Request pick up and delivery and get it delivered to your door-step </span>
+            </div>
+
+          </div>
+          <div class="card row col-lg-4 text-center p-2 border-0" style="height:130px">
+            <div class="dv col-6">
+
+            <img src="asset/img/3.png" width="100" alt="...">
+          </div>
+          <div class="card-body col-6">
+              <span class="h6">Track your deliver and get it delivered to you as soon as possible</span>
+            </div>
+
+          </div>
           </div>
         </section>
         <section class="container-fluid pt-3">
@@ -344,7 +382,35 @@
           </div>
 
         </section>
-
+<section class="pt-5">
+  <div class="row mobile-card">
+    <div class="col-lg-6 col-sm-12">
+      <div class="mobile-img">
+        <img src="/asset/img/mobile2.png" alt="">
+      </div>
+    </div>
+    <div class="col-lg-6 col-sm-12 mobile-text">
+      <h3 class="h1">Download <br>
+      our handy app <br>
+    on Google Play or the App Store
+   </h3>
+<div class="app-button">
+  <span>
+    <button type="button" class="btn btn-light shadow-lg border-0" name="button">
+    <i class="glyphicon glyphicon-apple"></i>
+    App Store
+  </button>
+</span>
+  <span>
+    <button type="button" class="btn btn-light shadow-lg border-0" name="button">
+    <i class="iconsmind-Google-Play"></i>
+    Google Play
+  </button>
+</span>
+</div>
+    </div>
+  </div>
+</section>
         <section>
           <div class="row w-100 d-flex pl-4 justify-content-center">
             <span class="text-left h4 section-header">TOP CATEGORIES</span>
@@ -443,7 +509,7 @@
 
 <div class="mid-full">
 
-      <div class="jumbotron bg-dark text-white text-center" style="    opacity: 0.9;">
+      <div class="jumbotron text-white text-center" style="background-color: #000; opacity: 0.9;">
           <h3 class="display-5 text-center">Need Pick Up & Delivery Services?</h3>
           <p class="lead">We can help</p>
           <hr class="my-4">
@@ -610,7 +676,17 @@
                     </div>
                   </div>
                 </section>
+                <section class="text-white" style="background-color:#000">
+                  <div class="row w-100 d-flex pl-4 justify-content-center">
+                    <span class="text-left h4 section-header">CARTVORIE TV</span>
+                  </div>
+                  <div class="container mx-auto" style="width:40%; height:auto">
+                    <div class="embed-responsive embed-responsive-16by9">
+                      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/7HgGiCK33ow" allowfullscreen></iframe>
+                    </div>
 
+                  </div>
+                </section>
                 <footer class="bg-dark text-white p-4 text-decoration-none">
                   <div class="container">
                     <div class="row">
