--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
   <div class="row mobile-card">
     <div class="col-lg-6 col-sm-12">
       <div class="mobile-img">
-        <img src="/asset/img/mobile2.png" alt="">
+        <img src="asset/img/mobile2.png" alt="">
       </div>
     </div>
     <div class="col-lg-6 col-sm-12 mobile-text">
