--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <a class="navbar-brand p-0" href="#">
               <img src="asset/img/logo.jpeg" width="100" alt="">
             </a>
-            <span> <i>shopping made easy & fun....</i></span>
+            <span> <i>Shopping made easy & fun....</i></span>
           </div>
             <div class="d-lg-none">
 
