--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@
             <div class="collapse navbar-collapse justify-right" id="navbarNav">
               <div class="mr-auto mt-1 mt-lg-0"></div>
               <ul class="navbar-nav">
-                <li class="nav-item m-1 bt btn-dark shadow-lg rounded-lg">
-                  <a class="nav-link text-light" href="#">
+                <li class="nav-item m-1 border border-primary  btn-outline-dark shadow-lg rounded-lg" style="background-color: #fbf4fe;">
+                  <a class="nav-link" href="#">
                     Groceries Delivery
                     <span class="sr-only">(current)</span></a>
                   </li>
-                  <li class="nav-item m-1 bt btn-dark shadow-lg rounded-lg text-light">
-                    <a class="nav-link text-light" href="#">Pick up & Delivery</a>
+                  <li class="nav-item m-1 border border-primary btn-outline-dark shadow-lg rounded-lg" style="background-color: #fbf4fe;">
+                    <a class="nav-link" href="#">Pick up & Delivery</a>
                   </li>
-                  <li class="nav-item m-1 dropdown bt btn-dark shadow-lg rounded-lg text-light">
-                    <a class="nav-link text-light dropdown-toggle" href="#" id="stores" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <li class="nav-item m-1 border border-primary btn-outline-dark dropdown shadow-lg rounded-lg" style="background-color: #fbf4fe;">
+                    <a class="nav-link dropdown-toggle" href="#" id="stores" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Stores
                     </a>
                     <div class="dropdown-menu" aria-labelledby="stores">
@@ -142,8 +142,8 @@
                       <a class="dropdown-item" href="#">Others</a>
                     </div>
                   </li>
-                  <li class="nav-item m-1 dropdown bt btn-dark shadow-lg rounded-lg text-light">
-                    <a class="nav-link dropdown-toggle text-light" href="#" id="categories" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <li class="nav-item m-1 border border-primary btn-outline-dark dropdown shadow-lg rounded-lg" style="background-color: #fbf4fe;">
+                    <a class="nav-link dropdown-toggle" href="#" id="categories" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       All Categories
                     </a>
                     <div class="dropdown-menu" aria-labelledby="categories">
@@ -154,19 +154,19 @@
                       <a class="dropdown-item" href="#">Others</a>
                     </div>
                   </li>
-                  <li class="nav-item m-1 bt btn-dark shadow-lg rounded-lg text-light">
-                    <a class="nav-link text-light" href="#" id="products">
+                  <li class="nav-item m-1 border border-primary btn-outline-dark shadow-lg rounded-lg" style="background-color: #fbf4fe;">
+                    <a class="nav-link" href="#" id="products">
                       All Products
                     </a>
 
                   </li>
 
 
-                  <li class="nav-item m-1 bt btn-dark shadow-lg rounded-lg text-light">
-                    <a class="nav-link text-light" href="#">Inquiry</a>
+                  <li class="nav-item m-1 border border-primary btn-outline-dark shadow-lg rounded-lg" style="background-color: #fbf4fe;">
+                    <a class="nav-link" href="#">Inquiry</a>
                   </li>
-                  <li class="nav-item m-1 bt btn-dark shadow-lg rounded-lg text-light">
-                    <a class="nav-link text-light" href="#">Track Your Delivery</a>
+                  <li class="nav-item m-1 border border-primary btn-outline-dark shadow-lg rounded-lg" style="background-color: #fbf4fe;">
+                    <a class="nav-link" href="#">Track Your Delivery</a>
                   </li>
 
                 </ul>
