--- a/index.html
+++ b/index.html
@@ -89,37 +89,12 @@
             <!-- <span class="navbar-toggler-icon"></span> -->
           </button>
           <div class="brand-image">
-              <a class="navbar-brand p-0" href="#">
+              <a class="navbar-brand p-0" href="index.html">
               <img src="asset/img/logo.jpeg" width="100" alt="">
             </a>
             <span> <i>Shopping made easy & fun....</i></span>
           </div>
-            <div class="d-lg-none">
 
-              <nav class="navbar navbar-static-top">
-
-
-                <div class="navbar-custom-menu text-light r-side">
-                  <ul class="nav navbar-nav">
-                    <!-- full Screen -->
-                    <li class="search-bar">
-                      <div class="lookup lookup-circle lookup-right">
-                        <input type="text" name="s">
-                      </div>
-                    </li>
-
-
-                    <!-- User Account-->
-                    <li class="nav-item account">
-                      <a href="#" class="">
-                        <i class="mdi mdi-account"></i>
-                        <span>Login/Sign Up</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </nav>
-            </div>
             <div class="collapse navbar-collapse justify-right" id="navbarNav">
               <div class="mr-auto mt-1 mt-lg-0"></div>
               <ul class="navbar-nav">
@@ -136,10 +111,10 @@
                       Stores
                     </a>
                     <div class="dropdown-menu" aria-labelledby="stores">
-                      <a class="dropdown-item" href="#">African</a>
-                      <a class="dropdown-item" href="#">International</a>
-                      <a class="dropdown-item" href="#">Main Market</a>
-                      <a class="dropdown-item" href="#">Others</a>
+                      <a class="dropdown-item" href="stores.html">African</a>
+                      <a class="dropdown-item" href="stores.html">International</a>
+                      <a class="dropdown-item" href="stores.html">Main Market</a>
+                      <a class="dropdown-item" href="stores.html">Others</a>
                     </div>
                   </li>
                   <li class="nav-item m-1 border border-primary btn-outline-dark dropdown shadow-lg rounded-lg" style="background-color: #fbf4fe;">
@@ -147,15 +122,15 @@
                       All Categories
                     </a>
                     <div class="dropdown-menu" aria-labelledby="categories">
-                      <a class="dropdown-item" href="#">Food</a>
-                      <a class="dropdown-item" href="#">Prepared Meal</a>
-                      <a class="dropdown-item" href="#">Toiletries</a>
-                      <a class="dropdown-item" href="#">Fruits</a>
-                      <a class="dropdown-item" href="#">Others</a>
+                      <a class="dropdown-item" href="categories.html">Food</a>
+                      <a class="dropdown-item" href="categories.html">Prepared Meal</a>
+                      <a class="dropdown-item" href="categories.html">Toiletries</a>
+                      <a class="dropdown-item" href="categories.html">Fruits</a>
+                      <a class="dropdown-item" href="categories.html">Others</a>
                     </div>
                   </li>
                   <li class="nav-item m-1 border border-primary btn-outline-dark shadow-lg rounded-lg" style="background-color: #fbf4fe;">
-                    <a class="nav-link" href="#" id="products">
+                    <a class="nav-link" href="products.html" id="products">
                       All Products
                     </a>
 
@@ -163,10 +138,10 @@
 
 
                   <li class="nav-item m-1 border border-primary btn-outline-dark shadow-lg rounded-lg" style="background-color: #fbf4fe;">
-                    <a class="nav-link" href="#">Inquiry</a>
+                    <a class="nav-link" href="inquiry.html">Inquiry</a>
                   </li>
                   <li class="nav-item m-1 border border-primary btn-outline-dark shadow-lg rounded-lg" style="background-color: #fbf4fe;">
-                    <a class="nav-link" href="#">Track Your Delivery</a>
+                    <a class="nav-link" href="deliver.html">Track Your Delivery</a>
                   </li>
 
                 </ul>
